--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,7 +8,7 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
-      <% if Purchase.exists?(@item.id) %>
+      <% if @item.purchase.present? %>
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
@@ -24,7 +24,7 @@
     </div>
 
     <% if user_signed_in? %>
-      <% unless Purchase.exists?(@item.id) %>
+      <% unless @item.purchase.present? %>
         <% if current_user.id == @item.user.id %>
           <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
           <p class="or-text">or</p>
